--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     width: 100%;
     height: 2px;
     background: linear-gradient(to left, #5E639B00, #FF0000);
-    animation: animate3 2s 2s linear infinite;
+    animation: animate3 2s linear infinite;
     }
     @keyframes animate3 {
     0%{
@@ -107,7 +107,7 @@
     width: 2px;
     height: 100%;
     background: linear-gradient(to top, #5E639B00, #FF0000);
-    animation: animate4 2s 3s linear infinite;
+    animation: animate4 2s 1s linear infinite;
     }
     @keyframes animate4 {
     0%{
